# alg_painter

./: Dockerfile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml  linting.yaml  release.yaml
src/alg_painter/: __init__.py  alg_painter.py  alg_plotter_v1.py  alg_plotter_v2.py  cli.py  generics.py  ncbi_api.py  plotter_colours.py
src/original/: buscopainter.py  plot_buscopainter.py
src/tests/data/: lep_assembly.fa.fai
