[project]
name = "alg-painter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DLBPointon", email = "damonlbp@hotmail.co.uk" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
alg = "alg_painter.cli:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
