[project]
name = "alg-painter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DLBPointon", email = "damonlbp@hotmail.co.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pathlib>=1.0.1",
    "requests>=2.33.1",
]

[project.scripts]
alg = "alg_painter.cli:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
